# sycl-crowd-simulation

./: CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: scorecard.yml
include/: Actor.cpp  Actor.hpp  CMakeLists.txt  DifferentialEq.cpp  DifferentialEq.hpp  GeometricVector.cpp  GeometricVector.hpp  MathHelper.cpp  MathHelper.hpp  Room.cpp  Room.hpp
input/: InputFileGenerator.py  README.md  corridorWidening.json  evacuateRoom.json  fourCorridor.json  fourSquare.json  laneFiltering.json  test.json  tightCorner,json  tightCorner.json  twoExitsTwoGroups.json
output/: README.md  outputStats.txt
output/csv/: README.md
output/images/: README.md
scripts/: InputFileGenerator.py  PlotGraphs.py  xvfb.sh
src/: Actor.cpp  Actor.hpp  main.cpp
